# providcy

./: .gitignore  README.md  build.gradle  install  install.sh  settings.gradle
backend/: build.gradle
backend/src/main/java/ru/providcy/: BackendApplication.java
backend/src/main/resources/: application.yml
backend/src/main/resources/db/: 0000-changelog-master.xml  0001-create.xml
docker/: Dockerfile.back  Dockerfile.exonum  Dockerfile.front  Dockerfile.node  Dockerfile.smbus  docker-compose-backend.yml  docker-compose-exonum.yml  docker-compose-frontend.yml  docker-compose-node.yml  docker-compose-smbus.yml  docker-compose-storages.yml  entrypoint-node.sh  install
frontend/: index.html
frontend/codebase/: myapp.js
frontend/libs/: exonum-client.min.js  webix.min.css
frontend/libs/skins/: compact.min.css  contrast.min.css  flat.min.css  material.min.css  mini.min.css
node/: Cargo.toml
node/src/: api.rs  borrower.rs  insurance.rs  lib.rs  loan_order.rs  loan_request.rs  main.rs  mod.rs  schema.rs  transactions.rs  utils.rs
node/src/api/: mod.rs
node/src/contracts/: mod.rs
node/src/proto/: mod.rs  service.proto
node/src/schema/: mod.rs
node/src/transactions/: mod.rs
smbus/: requirements.txt
smbus/src/: BankService.py  InsurerService.py  TestExonum.py  TestRMQ.py  settings.py  start.py
smbus/src/notifier/: __init__.py  base_notifier.py  mail_notifier.py
smbus/src/rabbit_mq/: __init__.py  consumer.py  publisher.py
smbus/src/service_queue/: BankService.py  BaseService.py  InsurerService.py  __init__.py
(+10 files in other folders)
