[package]
name = "insurance"
version = "0.1.0"
edition = "2018"
authors = ["Alex S. Marinenko <alex.marinenko@gmail.com>"]

[dependencies]
exonum = "1.0.0"
exonum-cli = "1.0.0"
exonum-crypto = "1.0.0"
exonum-derive = "1.0.0"
exonum-merkledb = "1.0.0"
exonum-proto = "1.0.0"
exonum-rust-runtime = "1.0.0"

anyhow = "1.0"
protobuf = "2.17.0"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"

[build-dependencies]
exonum-build = "1.0.0"


