[package]
name = "exonum-domrf"
version = "1.0.0"
publish = false
edition = "2018"
authors = ["Alex Marinenko <alex.marinenko@gmail.com>"]
license = "MIT"
keywords = ["exonum", "blockchain", "domrf"]
description = "Exonum blockchain implementing DomRF case."

[badges]
travis-ci = { repository = "exonum/exonum" }

[dependencies]
exonum = "1.0.0"
exonum-derive = "1.0.0"
exonum-merkledb = "1.0.0"
exonum-proto = "1.0.0"
exonum-cli = "1.0.0"
exonum-rust-runtime = "1.0.0"

anyhow = "1.0"
protobuf = "2.17.0"
serde = "1.0"
serde_derive = "1.0"

[dependencies.tokio]
version = "0.2.22"
features = ["blocking", "dns", "io-util", "macros", "rt-threaded", "tcp", "time"]

[dev-dependencies]
exonum-explorer-service = "1.0.0"
exonum-supervisor = "1.0.0"
exonum-testkit = "1.0.0"

assert_matches = "1.2"
bincode = "1.3"
hex = "0.4"
pretty_assertions = "0.7.1"
rand = "0.8"
serde_json = "1.0"

[build-dependencies]
exonum-build = "1.0.1"

[features]
default = ["with-serde"]
with-serde = []
